Update README und Source Code

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rebootmaster-dashboard",
+  "name": "UptimeSHIELD-dashboard",
   "private": true,
   "version": "0.0.1-beta",
   "type": "module",
