--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "rebootmaster-server",
+    "name": "UptimeSHIELD-server",
     "version": "1.0.0",
-    "description": "Backend for REBOOTMASTER",
+    "description": "Backend for UptimeSHIELD",
     "main": "server.js",
     "scripts": {
         "start": "node server.js"
