--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "UptimeSHIELD-dashboard",
+  "name": "uptimeshield-dashboard",
   "private": true,
   "version": "0.0.1-beta",
   "type": "module",
@@ -8,7 +8,8 @@
     "dev": "concurrently -k -n \"server,vite\" -c \"cyan,magenta\" \"node server/server.js\" \"vite\"",
     "server": "node server/server.js",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "install:all": "npm install && cd server && npm install"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
