feat: Add AI-powered log analysis and health report generation with a new log viewer component, and update branding to UptimeSHIELD.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uptimeshield-dashboard",
+  "name": "uptimeshield",
   "private": true,
   "version": "0.0.1-beta",
   "type": "module",
