--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uptimeshield",
   "private": true,
-  "version": "0.0.1-beta",
+  "version": "0.0.2-beta",
   "type": "module",
   "scripts": {
     "predev": "powershell -ExecutionPolicy Bypass -File ./server/scripts/ensure-certs.ps1",
@@ -9,7 +9,8 @@
     "server": "node server/server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "install:all": "npm install && cd server && npm install"
+    "install:all": "npm install && npm install --prefix server",
+    "uninstall:all": "powershell -Command \"Remove-Item -Recurse -Force node_modules, package-lock.json, server/node_modules, server/package-lock.json, server/certs -ErrorAction SilentlyContinue\""
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
