--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "UptimeSHIELD-server",
+    "name": "uptimeshield-server",
     "version": "1.0.0",
     "description": "Backend for UptimeSHIELD",
     "main": "server.js",
